Sort library matches after every module call